--- a/consultaCep/estilo.css
+++ b/consultaCep/estilo.css
@@ -40,12 +40,20 @@ form input {
     border-radius: 20px;
 }
 
+form button{
+    outline: unset;
+    padding: 20px;
+    min-width: 300px;
+    border: 1px color solid rgb(54, 221, 54);
+    border-radius: 20px;
+}
+
 
 form input:focus{
 background-color: rgb(214, 200, 174);
 }
 
-form input[type="submit"] {
+form button[type="button"] {
     background-color: rgb(54, 221, 54);
     color: white;
     cursor: pointer;
